syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__preserve_non_doc__preserves_derive_attrs.snap
---
source: syncdoc-migrate/src/tests/diff/preserve_non_doc.rs
expression: result
---
#[derive(Debug)]
#[syncdoc::omnidoc]
pub struct Test;
