syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__preserve_non_doc__preserves_multiple_non_doc_attrs.snap
---
source: syncdoc-migrate/src/tests/diff/preserve_non_doc.rs
expression: result
---
#[derive(Debug, Clone)]
#[cfg(feature = "test")]
#[syncdoc::omnidoc]
pub struct Test;
