syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__preserve_non_doc__snapshot_attribute_preservation.snap
---
source: syncdoc-migrate/src/tests/diff/preserve_non_doc.rs
expression: result
---
#[derive(Clone)]
#[syncdoc::omnidoc]
pub struct Section {
    pub title: String,
}

#[derive(Clone)]
#[syncdoc::omnidoc]
pub enum ChunkType {
    Added,
}
